# argos3-drone

./: README.md
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake  FindTurboJPEG.cmake
src/plugins/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/drone/: CMakeLists.txt
src/plugins/robots/drone/hardware/: actuator.h  drone_cameras_system_default_sensor.cpp  drone_cameras_system_default_sensor.h  drone_flight_system_default_actuator.cpp  drone_flight_system_default_actuator.h  drone_flight_system_default_sensor.cpp  drone_flight_system_default_sensor.h  drone_leds_default_actuator.cpp  drone_leds_default_actuator.h  drone_rangefinders_default_sensor.cpp  drone_rangefinders_default_sensor.h  drone_system_default_sensor.cpp  drone_system_default_sensor.h  main.cpp  pixhawk.cpp  pixhawk.h  radios_default_actuator.cpp  radios_default_actuator.h  radios_default_sensor.cpp  radios_default_sensor.h  robot.cpp  robot.h  sensor.h  simple_radios_default_actuator.cpp  simple_radios_default_actuator.h  simple_radios_default_sensor.cpp  simple_radios_default_sensor.h
src/testing/: CMakeLists.txt  test_cameras.argos.in  test_system.lua  test_wifi.lua
